# arith.ml

./: README.md  arith.opam  dune-project
.github/: ci.yaml
lib/: dune  extensions.ml  lexer.ml  lexer.mli  runner.ml  runner.mli
test/: dune  extensions.ml  lexer.ml
